# PythonAliasManager

./: CHANGELOG.md  INSTALLATION.md  README.md  README_MODULES.md  example_script.py  install_alias_manager.py  install_package.py  install_simple.py  install_wsl.sh  pyproject.toml  python_alias_manager.py  test_installation.py
alias_manager/: __init__.py  __main__.py  cli.py  config.py  core.py  dependency_manager.py  environment_setup.py  script_generator.py  utils.py  venv_detector.py
